--- a/unused/test.html
+++ b/unused/test.html
@@ -392,6 +392,14 @@
   <style>
   .detail_content{
     display: none;
+	  color:#FF0000;
+	  color:#2E8B57;
+	  color: rgb(255, 100, 100);
+	  color: rgb(7, 200, 7);
+	  color: rgb(26, 196, 26);
+	  color: rgb(54, 203, 54);
+	  color: rgb(83, 212, 83);
+	  color: rgb(141, 248, 141);
 }
 
   </style>
@@ -441,6 +449,7 @@
 
 		});
     })
+	  window.location.url = 'http://www.taobao.com' + encodeURIComponent()
 </script>
 
  </body>
