--- a/unused/test.html
+++ b/unused/test.html
@@ -444,7 +444,9 @@
 <label for="h">h:<input type="text" id = 'h'>
 <label for="s">s:<input type="text" id = 's'>
 <label for="v">v:<input type="text" id = 'v'>
-<!--<div id = 'color_block67' style="width: 100px;height: 100px; border: 1px solid black;"></div>-->
+<div id = 'color_block' style="width: 100px;height: 100px; border: 1px solid black;"></div>
+
+
 <div id = 'color_block1' style="width: 100px;height: 100px; border: 1px solid black;"></div>
 <!--<div id = 'color_block12' style="width: 100px;height: 100px; border: 1px solid black;"></div>-->
 <div id = 'color_block2' style="width: 100px;height: 100px; border: 1px solid black;"></div>
