--- a/unused/test.html
+++ b/unused/test.html
@@ -391,9 +391,9 @@
         .detail_content {
             display: none;
             color: #FF0000;
-            color: #2E8B57;
-            color: #fff;
-            color: #d05a56;
+            color: lightcoral;
+            color: #545454;
+            color: #c23531;
             color: rgb(153, 0, 51);
             color: rgb(255, 0, 85);
             color: rgb(0, 204, 68);
