--- a/unused/test.html
+++ b/unused/test.html
@@ -389,6 +389,7 @@
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <style>
         .detail_content {
+            border-color:#e7e7e7;
             display: none;
             color: #FF0000;
             color: lightcoral;
